feat(aop): wire AopProxyBeanPostProcessor to ProxyFactory
Also re-enables the two integration tests that were disabled since 6.2.0 with
an unverified claim about --add-opens. They now run on plain JDK 21.

Refs #188